--- a/app/styles/blackout.scss
+++ b/app/styles/blackout.scss
@@ -419,3 +419,57 @@ $splash-logo-color: darken(desaturate(adjust-hue($primary-master,6%),25%),25%);
   margin:0;
   padding:0;
 }
+
+/**
+ * Charts.js custom tips
+ */
+
+$color: rgba($bg-dark-lighter, .8);
+
+.chartjs-tooltip {
+    position: absolute;
+    background: $color;
+    color: white;
+    padding: 3px 7px;
+    border-radius: $border-radius;
+    pointer-events: none;
+    transform: translate(-50%, 0);
+    -webkit-transform: translate(-50%, 0);
+    white-space: nowrap;
+    z-index:99;
+    opacity: 0;
+    transition:opacity 0.222s;
+}
+.chartjs-tooltip.below {
+    transform: translate(-50%, 0);
+    -webkit-transform: translate(-50%, 0);
+}
+.chartjs-tooltip.below:before {
+    border: solid;
+    border-color: $color transparent;
+    border-width: 0 8px 8px 8px;
+    top: 0;
+    content: "";
+    display: block;
+    left: 50%;
+    position: absolute;
+    z-index: 99;
+    transform: translate(-50%, -100%);
+    -webkit-transform: translate(-50%, -100%);
+}
+.chartjs-tooltip.above {
+    transform: translate(-50%, -100%);
+}
+.chartjs-tooltip.above:before {
+    border: solid;
+    border-color: $color transparent;
+    border-width: 8px 8px 0 8px;
+    bottom: 0;
+    content: "";
+    display: block;
+    left: 50%;
+    top: 100%;
+    position: absolute;
+    z-index: 99;
+    transform: translate(-50%, 0);
+}
